# cc-py

./: .gitignore  Makefile  README.md  pyproject.toml
cc/: __main__.py  main.py
cc/api/: claude.py  client.py  token_estimation.py
cc/commands/: registry.py
cc/compact/: compact.py
cc/core/: events.py  query_engine.py  query_loop.py
cc/hooks/: hook_runner.py
cc/mcp/: client.py  config.py
cc/memory/: extractor.py  session_memory.py
cc/models/: content_blocks.py  messages.py  state.py
cc/permissions/: gate.py  rules.py
cc/prompts/: builder.py  claudemd.py  coordinator_prompt.py  sections.py  teammate_prompt.py
cc/session/: history.py  recovery.py  storage.py  task_registry.py
cc/skills/: loader.py
cc/swarm/: __init__.py  coordinator.py  identity.py  in_process_runner.py  mailbox.py  spawn.py  team_context.py  team_file.py
cc/tools/: base.py  orchestration.py  streaming_executor.py
cc/tools/agent/: agent_tool.py  background.py  worktree.py
cc/tools/ask_user/: ask_user_tool.py
cc/tools/bash/: bash_tool.py
cc/tools/brief/: brief_tool.py
cc/tools/file_edit/: file_edit_tool.py
cc/tools/file_read/: file_read_tool.py
cc/tools/file_write/: file_write_tool.py
cc/tools/glob_tool/: glob_tool.py
cc/tools/grep_tool/: grep_tool.py
cc/tools/lsp/: lsp_tool.py
cc/tools/notebook/: notebook_edit_tool.py
cc/tools/plan_mode/: plan_mode_tool.py
cc/tools/send_message/: __init__.py  send_message_tool.py
cc/tools/skill/: skill_tool.py
cc/tools/task_tools/: task_tools.py
cc/tools/team/: __init__.py  team_create_tool.py  team_delete_tool.py
cc/tools/todo/: todo_write_tool.py
cc/tui/: __init__.py  app.py  pet.py
cc/ui/: renderer.py
cc/utils/: errors.py
tests/e2e/: test_cli.py
tests/integration/: test_query_loop.py
tests/unit/api/: test_claude.py  (+6 more)
(+66 files in other folders)
