[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-python-claude"
version = "0.1.0"
description = "Python reimplementation of Claude Code CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
markdown = ["markdownify>=0.13"]
notebook = ["nbformat>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
all = [
    "cc-python-claude[mcp,markdown,notebook,dev]",
]

[project.scripts]
cc = "cc.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real API key",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
# Prompt text files contain long lines copied verbatim from TS source
"cc/prompts/sections.py" = ["E501"]
"cc/prompts/coordinator_prompt.py" = ["E501"]
"cc/prompts/teammate_prompt.py" = ["E501"]
"cc/compact/compact.py" = ["E501"]
"cc/memory/extractor.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cc"]

[tool.hatch.build.targets.wheel]
packages = ["cc"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "aiofiles",
    "markdownify",
]
ignore_missing_imports = true
